--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -318,8 +318,7 @@
     "    songs_link.append(song.a[\"href\"])\n",
     "print(songs)\n",
     "print(songs_list)\n",
-    "print(songs_link )\n",
-    "\n"
+    "print(songs_link)"
    ]
   },
   {
@@ -411,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -419,26 +418,25 @@
      "output_type": "stream",
      "text": [
       "<class 'str'>\n",
+      "「ハッピーサプライズ」\n",
       "<class 'str'>\n",
+      "「Emerald」\n",
       "<class 'str'>\n",
+      "「Timeless Love」\n",
       "<class 'str'>\n",
+      "「シンシア」\n",
       "<class 'str'>\n",
+      "「サチアレ」\n",
       "<class 'str'>\n",
+      "「The Answer」\n",
       "<class 'str'>\n",
+      "「Soda Pop Love」\n",
       "<class 'str'>\n",
+      "「僕空～足跡のない未来～」\n",
       "<class 'str'>\n",
-      "<class 'str'>\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'songlink' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [114]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m         songlink \u001b[38;5;241m=\u001b[39m songs_link[s]\n\u001b[0;32m      6\u001b[0m     s \u001b[38;5;241m=\u001b[39m s \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43msonglink\u001b[49m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'songlink' is not defined"
+      "「夢わたし」\n",
+      "<class 'str'>\n",
+      "「ダイヤモンドスマイル」\n"
      ]
     }
    ],
@@ -446,7 +444,8 @@
     "s = 0\n",
     "for i in songs:\n",
     "    print( type(i[0]) )\n",
-    "    if i == song:\n",
+    "    print( i[0] )\n",
+    "    if i[0] == song:\n",
     "        songlink = songs_link[s]\n",
     "    s = s + 1\n",
     "#print(songlink)"
@@ -454,41 +453,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "'https://minniejplyrics.wordpress.com/2022/10/28/%e3%80%90%e4%b8%ad%e6%96%87%e6%ad%8c%e8%a9%9e%e7%bf%bb%e8%ad%af%e3%80%91%e3%81%aa%e3%81%ab%e3%82%8f%e7%94%b7%e5%ad%90%e3%80%8c%e3%83%8f%e3%83%83%e3%83%94%e3%83%bc%e3%82%b5%e3%83%97%e3%83%a9%e3%82%a4/'"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s"
+    "songlink"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'songlink' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [75]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[43msonglink\u001b[49m\u001b[38;5;66;03m#find new url and updata\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m req\u001b[38;5;241m.\u001b[39murlopen(url) \u001b[38;5;28;01mas\u001b[39;00m response:\n\u001b[0;32m      3\u001b[0m     data \u001b[38;5;241m=\u001b[39m response\u001b[38;5;241m.\u001b[39mread()\u001b[38;5;241m.\u001b[39mdecode(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'songlink' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "url = songlink#find new url and updata\n",
     "with req.urlopen(url) as response:\n",
@@ -498,14 +485,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SEVENTEEN – 櫻色落日\n"
+      "【中文歌詞翻譯】なにわ男子「ハッピーサプライズ」 – 櫻色落日\n"
      ]
     }
    ],
@@ -525,23 +512,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[<strong>「ハッピーサプライズ」（快樂驚喜）</strong>,\n",
+       " <strong>かじかむ手　握った時</strong>,\n",
+       " <strong>「ありがとう」って　君は笑った</strong>,\n",
+       " <strong>そんな風に　僕もいつか</strong>,\n",
+       " <strong>素直になれるだろうか</strong>,\n",
+       " <strong>去年よりも　早めの雪</strong>,\n",
+       " <strong>粉のように　空に舞って</strong>,\n",
+       " <strong>気づけばもう　街は忙しなく</strong>,\n",
+       " <strong>色を変えていたんだ</strong>,\n",
+       " <strong>特別な1日を君に</strong>,\n",
+       " <strong>リボンをかけて渡そう</strong>,\n",
+       " <strong>ロウソク1つ吹き消すたびに</strong>,\n",
+       " <strong>愛しさが増すよ</strong>,\n",
+       " <strong>Happy winter winter snow light</strong>,\n",
+       " <strong>めいっぱいの愛を</strong>,\n",
+       " <strong>君に贈ろう　見合ってほらsmile</strong>,\n",
+       " <strong>一瞬も　止まらない恋だった</strong>,\n",
+       " <strong>スピード上げたままsweet so sweet</strong>,\n",
+       " <strong>Oh happy winter snow light</strong>,\n",
+       " <strong>白く光って</strong>,\n",
+       " <strong>鳴り止まない心の音</strong>,\n",
+       " <strong>そのまま目を閉じて　扉を開けるよ</strong>,\n",
+       " <strong>さあ今から　始まる2人だけの</strong>,\n",
+       " <strong>ハッピーサプライズ</strong>,\n",
+       " <strong>特別な1日を君に</strong>,\n",
+       " <strong>心を込めて贈ろう</strong>,\n",
+       " <strong>ロウソク1つ吹き消すたびに</strong>,\n",
+       " <strong>思い出が灯る</strong>,\n",
+       " <strong>happy winter snow light</strong>,\n",
+       " <strong>雪の魔法で</strong>,\n",
+       " <strong>聖なる鐘が鳴る夜に</strong>,\n",
+       " <strong>Happy winter winter snow light</strong>,\n",
+       " <strong>めいっぱいの愛を</strong>,\n",
+       " <strong>君に贈ろう見合ってほらsmile</strong>,\n",
+       " <strong>一瞬も止まらない恋だった</strong>,\n",
+       " <strong>スピード上げたままsweet so sweet</strong>,\n",
+       " <strong>Oh happy winter snow light</strong>,\n",
+       " <strong>白く光って</strong>,\n",
+       " <strong>鳴り止まない心の音</strong>,\n",
+       " <strong>そのまま目を閉じて　扉を開けるよ</strong>,\n",
+       " <strong>さあ今から　始まる2人だけの</strong>,\n",
+       " <strong>ハッピーサプライズ<br/></strong>]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "lyric = lyriclink.find(\"div\", class_=\"entry-content\").find_all(\"strong\")\n",
-    "lyric \n",
+    "lyric\n",
     "#疑問:怎麼去掉<strong>，只取出歌詞\n",
     "#lyric.strong.string\n",
     "#re.findall(\"[^\\x00-\\xff ]+\",lyrics)\n",
